fix(components): Align subheaderbar items

--- a/packages/components/src/SubHeaderBar/InputTitleSubHeader/InputTitleSubHeader.scss
+++ b/packages/components/src/SubHeaderBar/InputTitleSubHeader/InputTitleSubHeader.scss
@@ -42,8 +42,6 @@ $tc-input-subheader-sub-title-weight: 300 !default;
 		justify-content: center;
 		overflow: hidden;
 		flex: 1 auto;
-		margin-right: 110px;
-		max-width: 90rem;
 
 		&-title {
 			display: inline-flex;
