--- a/packages/components/src/SubHeaderBar/SubHeaderBar.scss
+++ b/packages/components/src/SubHeaderBar/SubHeaderBar.scss
@@ -33,32 +33,25 @@ $tc-svg-icon-size: $padding-large !default;
 		height: $tc-subheader-bar-height;
 		background-color: $wild-sand;
 		display: flex;
-		padding-left: 0;
+		justify-content: space-between;
 
 		&-left,
 		&-center,
 		&-right {
 			display: flex;
+			flex: 1 1 auto;
 		}
 
 		&-left {
-			flex: 1;
+			justify-content: flex-start;
 		}
 
 		&-right {
-			margin-left: $padding-normal;
 			justify-content: flex-end;
 		}
 
 		&-center {
-			margin-left: auto;
-			margin-right: auto;
-			padding-left: $padding-smaller;
-			padding-right: $padding-smaller;
-
-			&-no-margin-right {
-				margin-right: 0;
-			}
+			justify-content: center;
 		}
 	}
 
